--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ a,li,h1{
 .logo-section{
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 .logo-section .logo-img{
     width: 60px;
@@ -128,19 +129,19 @@ a,li,h1{
 /* banner */
 .banner{
     width: 100%;
-    height: 100vh;
+    height: 650px;
     display: flex;
     align-items: center;
 }
 .banner-img{
     width: 100%;
-    /* height: 490px; */
     height: 100%;
 }
 .banner-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-position: center;
 }
 .banner-details{
     width: 500px;
@@ -206,8 +207,7 @@ a,li,h1{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    padding-bottom: 0 !important;
-    margin-bottom: 0 !important;
+    display: block;
 }
 .artist-name{
     display: flex;
